fix(core): align to baseline value decoration postfix

--- a/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
+++ b/projects/core/components/primitive-textfield/value-decoration/value-decoration.style.less
@@ -2,6 +2,7 @@
     position: absolute;
     display: block;
     height: 1.25rem;
+    line-height: 1;
     width: 100%;
     margin: -1.25rem 0;
     padding: 0.625rem 0;
@@ -16,6 +17,13 @@
     :host-context(tui-textfield[data-mode='onDark']) & {
         color: var(--tui-text-01-night);
     }
+
+    &:after {
+        content: '';
+        display: inline-block;
+        vertical-align: middle;
+        height: 100%;
+    }
 }
 
 .t-ghost {
@@ -24,8 +32,12 @@
     text-overflow: clip;
 }
 
+.t-prefix,
+.t-postfix {
+    white-space: pre;
+}
+
 .t-filler {
-    display: inline-block;
     overflow: hidden;
     color: var(--tui-text-03);
     text-overflow: ellipsis;
@@ -35,4 +47,9 @@
     :host-context(tui-textfield[data-mode='onDark']) & {
         color: var(--tui-text-03-night);
     }
+}
+
+.t-inline {
+    display: inline-block;
+    vertical-align: middle;
 }
